--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <form id="formulario" class="form-inline p-3">
+      <form id="repoForm" class="form-inline p-3">
         <div class="form-group">
           <label for="repository">Repositório:</label>
           <input type="text" class="form-control m-2" name="repository" id="repository">
@@ -29,31 +29,11 @@
   <div id="repoList" class="container">
     <div class="row">
       <div class="col-md-12">
-        <ul class="list-group">
-          <li class="list-group-item list-group-item-secondary">
-            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" class="rounded float-left mr-3"
-              style="width: 80px;">
-            <strong>rocketseat.com.br</strong>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptatem animi iste veniam quod culpa?
-            </p>
-            <a target="_blank" href="https://github.com/Bitteca">Acessar</a>
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" class="rounded float-left mr-3"
-              style="width: 80px;">
-            <strong>rocketseat.com.br</strong>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptatem animi iste veniam quod culpa?
-            </p>
-            <a target="_blank" href="https://github.com/Bitteca">Acessar</a>
-          </li>
-        </ul>
+        <ul class="list-group"></ul>
       </div>
     </div>
   </div>
+
 
 
   <!-- Optional JavaScript -->
